--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wally Store</title>
+  <meta name="description" content="Premium quality products at unbeatable prices.">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🛍️</text></svg>">
   <script src="assets/js/app.js" defer></script>
   <script src="assets/js/main.js" defer></script>
 </head>
@@ -12,7 +15,9 @@
   <div id="header"></div>
 
   <div id="app">
-    <!-- UI will be loaded here -->
+    <div class="loader">
+      <div class="spinner"></div>
+    </div>
   </div>
 
   <div id="footer"></div>
