--- a/ui/home.html
+++ b/ui/home.html
@@ -1,4 +1,14 @@
-<div id="home-container" class="home-view">
-  <h2>Welcome to Wally Store</h2>
-  <div class="products-grid"></div>
+<div class="home-view">
+  <section class="hero-section">
+    <h1>Discover the Best Products</h1>
+    <p>High-quality items with free shipping • Up to 30% off today!</p>
+    <a href="#/product/1" data-link class="cta-button">Shop Now →</a>
+  </section>
+
+  <section class="products-section">
+    <h2>Featured Products</h2>
+    <div id="products-grid" class="products-grid">
+      <!-- Injected by main.js -->
+    </div>
+  </section>
 </div>
