--- a/ui/pages.html
+++ b/ui/pages.html
@@ -1,4 +1,4 @@
-<div class="pages-page-container">
+<div class="page-container container">
   <h1 id="page-title"></h1>
   <div id="page-content"></div>
 </div>
