--- a/ui/product.html
+++ b/ui/product.html
@@ -1,23 +1,49 @@
-<div class="product-page-container">
-  <div class="product-images" id="product-images"></div>
-  <div class="product-details">
-    <h1 id="product-title"></h1>
-    <p id="product-description"></p>
-    <p id="product-price"></p>
-    <p id="product-stock"></p>
+<div class="product-page">
+  <div class="container">
+    <div class="product-gallery" id="product-images">
+      <!-- Injected by main.js -->
+    </div>
 
-    <form id="order-form">
-      <input type="hidden" id="productId">
-      <input type="hidden" id="selectedSize">
-      <input type="hidden" id="selectedColor">
-      <input type="hidden" id="selectedUnits">
-      <input type="hidden" id="totalPrice">
+    <div class="product-info">
+      <h1 id="product-title"></h1>
+      <p id="product-category" class="category"></p>
 
-      <input type="text" id="fullname" placeholder="Full Name" required>
-      <input type="text" id="address" placeholder="Address" required>
-      <input type="text" id="city" placeholder="City" required>
-      <input type="text" id="phone" placeholder="Phone" required>
-      <button type="submit">Order</button>
-    </form>
+      <div class="price-container">
+        <span id="product-price" class="price"></span>
+        <span id="original-price" class="original-price"></span>
+        <span id="discount-badge" class="discount-badge"></span>
+      </div>
+
+      <p id="product-stock" class="stock"></p>
+      <p id="product-description" class="short-desc"></p>
+
+      <div class="options">
+        <div class="option-group">
+          <label>Size</label>
+          <select id="selectedSize"></select>
+        </div>
+        <div class="option-group">
+          <label>Color</label>
+          <div id="color-options" class="color-options"></div>
+        </div>
+        <div class="option-group">
+          <label>Quantity</label>
+          <input type="number" id="selectedUnits" min="1" value="1">
+        </div>
+      </div>
+
+      <button class="add-to-cart-btn" id="add-to-cart">Add to Cart</button>
+
+      <div id="description-blocks" class="description-blocks"></div>
+
+      <!-- Hidden form kept for backward compatibility if you still want it -->
+      <form id="order-form" style="display:none;">
+        <input type="hidden" id="productId">
+        <input type="hidden" id="selectedSize-hidden">
+        <input type="hidden" id="selectedColor-hidden">
+        <input type="hidden" id="selectedUnits-hidden">
+        <input type="hidden" id="totalPrice">
+      </form>
+    </div>
   </div>
 </div>
