--- a/ui/product.html
+++ b/ui/product.html
@@ -1,12 +1,14 @@
 <div class="product-page">
   <div class="container">
+    <!-- LEFT COLUMN: Gallery (sticky on desktop) -->
     <div class="product-gallery" id="product-images">
-      <!-- Injected by main.js -->
+      <!-- Gallery injected by main.js -->
     </div>
 
+    <!-- RIGHT COLUMN: All info + Add to Cart button -->
     <div class="product-info">
-      <h1 id="product-title"></h1>
       <p id="product-category" class="category"></p>
+      <h1 id="product-title"></h1>
 
       <div class="price-container">
         <span id="product-price" class="price"></span>
@@ -14,7 +16,11 @@
         <span id="discount-badge" class="discount-badge"></span>
       </div>
 
-      <p id="product-stock" class="stock"></p>
+      <div id="product-stock" class="product-stock">
+        <i class="fas fa-check-circle stock-icon"></i>
+        <span class="stock-text">In Stock</span>
+      </div>
+
       <p id="product-description" class="short-desc"></p>
 
       <div class="options">
@@ -22,28 +28,28 @@
           <label>Size</label>
           <select id="selectedSize"></select>
         </div>
+
         <div class="option-group">
           <label>Color</label>
           <div id="color-options" class="color-options"></div>
         </div>
-        <div class="option-group">
+
+        <div class="option-group quantity-group">
           <label>Quantity</label>
-          <input type="number" id="selectedUnits" min="1" value="1">
+          <div class="quantity-controls">
+            <button type="button" class="qty-btn minus" id="qty-minus">-</button>
+            <input type="text" id="selectedUnits" value="1" readonly>
+            <button type="button" class="qty-btn plus" id="qty-plus">+</button>
+          </div>
+          <small class="qty-note">Maximum 10 per order</small>
         </div>
       </div>
 
+      <!-- ADD TO CART IS NOW INSIDE THE RIGHT COLUMN -->
       <button class="add-to-cart-btn" id="add-to-cart">Add to Cart</button>
 
       <div id="description-blocks" class="description-blocks"></div>
-
-      <!-- Hidden form kept for backward compatibility if you still want it -->
-      <form id="order-form" style="display:none;">
-        <input type="hidden" id="productId">
-        <input type="hidden" id="selectedSize-hidden">
-        <input type="hidden" id="selectedColor-hidden">
-        <input type="hidden" id="selectedUnits-hidden">
-        <input type="hidden" id="totalPrice">
-      </form>
     </div>
+    <!-- End of .product-info -->
   </div>
 </div>
