--- a/pages/404.html
+++ b/pages/404.html
@@ -1,1 +1,13 @@
-
+<div class="static-page container">
+  <div style="text-align:center; padding:6rem 2rem;">
+    <h1 style="font-size:4rem; color:var(--primary);">404</h1>
+    <h2>Page Not Found</h2>
+    <p style="font-size:1.2rem; margin:2rem 0;">
+      Sorry, the page you're looking for doesn't exist.<br>
+      It might have been moved or deleted.
+    </p>
+    <a href="#/home" data-link class="cta-button" style="display:inline-block; margin-top:1rem;">
+      ← Back to Home
+    </a>
+  </div>
+</div>
