--- a/404.html
+++ b/404.html
@@ -53,7 +53,7 @@
     }
   </style>
 
-  <!-- GitHub Pages SPA fix – keeps the hash like #/pages/about -->
+  <!-- GitHub Pages SPA redirect – this is the ONLY thing that should redirect -->
   <script type="text/javascript">
     // From https://github.com/rafgraph/spa-github-pages
     var pathSegmentsToKeep = 0;
@@ -68,8 +68,8 @@
 </head>
 <body>
   <h1>404</h1>
-  <p>Sorry, we can't find that page. Redirecting home...</p>
-  <a href="/">Back to Home</a>
+  <p>Sorry, we can't find that page.</p>
+  <a href="/">← Back to Home</a>
 
   <div class="sparkle" style="top:20%; left:10%; animation-delay:0s;"></div>
   <div class="sparkle" style="top:40%; left:70%; animation-delay:0.5s;"></div>
