--- a/ui/checkout.html
+++ b/ui/checkout.html
@@ -1,6 +1,6 @@
 <div class="checkout-page">
   <div class="container">
-    <h1>Checkout • Cash on Delivery</h1>
+    <h1>Checkout</h1>
     <p class="cod-note"><i class="fas fa-truck"></i> Pay when you receive • Free Shipping • 30-day returns</p>
 
     <div class="checkout-grid">
@@ -29,10 +29,18 @@
             <label>Full Address *</label>
             <textarea id="address" rows="3" required placeholder="House no, street, area, landmark"></textarea>
           </div>
+          
+          <!-- CITY DROPDOWN – REPLACED INPUT -->
           <div class="form-group">
-            <label>City *</label>
-            <input type="text" id="city" required placeholder="e.g. Casablanca, Rabat, Marrakech">
-          </div>
+  <label>City *</label>
+  <div class="select-wrapper">
+    <select id="city" required>
+      <option value="" disabled selected>Choose your city</option>
+    </select>
+    <i class="fas fa-chevron-down select-arrow"></i>
+  </div>
+</div>
+
           <div class="form-group">
             <label>Additional Notes (optional)</label>
             <textarea id="notes" rows="2" placeholder="e.g. Ring the bell, leave with neighbor"></textarea>
