--- a/ui/home.html
+++ b/ui/home.html
@@ -2,11 +2,14 @@
   <section class="hero-section">
     <h1>Discover the Best Products</h1>
     <p>High-quality items with free shipping • Up to 30% off today!</p>
-    <a href="#/product/1" data-link class="cta-button">Shop Now →</a>
+    <a href="#home/#products-start" id="shop-now-btn" class="cta-button">
+  Shop Now <i class="fas fa-chevron-right"></i>
+</a>
   </section>
 
   <section class="products-section">
     <h2>Featured Products</h2>
+    <div id="products-start"></div>
     <div id="products-grid" class="products-grid">
       <!-- Injected by main.js -->
     </div>
