--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="assets/css/styles.css">
   <script src="assets/js/app.js" defer></script>
   <script src="assets/js/main.js" defer></script>
+  <script src="https://web3forms.com/client/script.js" async defer></script>
 </head>
 <body>
   <div id="header"></div>
