--- a/pages/contact.html
+++ b/pages/contact.html
@@ -95,6 +95,7 @@
 <!-- <script src="https://web3forms.com/client/script.js" async defer></script>-->
 
 <script>
+  /*
   // Create a new script element
 const script = document.createElement('script');
 
@@ -111,7 +112,7 @@ script.onload = () => {
 };
 
 // Append the script to the document head (or body)
-document.head.appendChild(script);
+document.head.appendChild(script);*/
 const form = document.getElementById('contact-form');
 
 form.addEventListener('submit', function(e) {
